2014-10-10  Andy Estes  <aestes@apple.com>

        Mark compositing/rtl/rtl-fixed-overflow-scrolled.html as [ Failure ] on mac-wk1 platforms.

        * platform/mac-wk1/TestExpectations:

2014-10-10  Simon Fraser  <simon.fraser@apple.com>

        iOS Simulator results for fast/events tests.

        * platform/ios-simulator/fast/events/*: Added

2014-10-10  Simon Fraser  <simon.fraser@apple.com>

        iOS Simulator results for fast/dynamic tests.

        * platform/ios-simulator/fast/dynamic/*: Added

2014-10-10  Simon Fraser  <simon.fraser@apple.com>

        iOS Simulator results for fast/css3-text, fast/doctypes, fast/dom tests.
        Skip fast/DeviceOrientation, fast/dom/shadow and some other failing tests.

        * platform/ios-simulator/fast/css3-text/*: Added.
        * platform/ios-simulator/fast/doctypes/*: Added.
        * platform/ios-simulator/fast/dom/*: Added.

2014-10-10  Said Abou-Hallawa  <sabouhallawa@apple.com>

        RenderMathMLUnderOver adds spacing to the child operator indefinitely when resizing the window.
        https://bugs.webkit.org/show_bug.cgi?id=137330

        Reviewed by Simon Fraser.

        Change the layout with resize test of the MathML underover object from being render tree test
        to be reference test. The render test was failing on WK2 because it was doing window resizing 
        and view zooming.  The new test rely solely on forcing the layout synchronously by resizing the
        math container <div> element.

        * mathml/opentype/munderover-layout-resize-expected.html: Added.
        * mathml/opentype/munderover-layout-resize.html: Added.
        * mathml/opentype/munderover-window-resize-expected.txt: Removed.
        * mathml/opentype/munderover-window-resize.html: Removed.

2014-10-10  Benjamin Poulain  <benjamin@webkit.org>

        Update :nth-child(An+B of selector-list) to the latest specification
        https://bugs.webkit.org/show_bug.cgi?id=137593

        Reviewed by Andreas Kling.
